--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#" class="text-gray-600 hover:text-red-600" id="reviews-link">Reseñas</a>
         <a href="#" class="text-gray-600 hover:text-red-600" id="contact-link">Contacto</a>
       </nav>
-      <button onclick="toggleLanguage()" class="bg-red-600 text-white px-4 py-2 rounded-lg font-semibold hover:bg-blue-700">EN / ES</button>
+      <button onclick="toggleLanguage()" class="bg-red-600 text-white px-4 py-2 rounded-lg font-semibold hover:bg-red-700">EN / ES</button>
     </div>
   </header>
 
@@ -143,14 +143,14 @@
         <label class="block text-gray-700 font-semibold mb-2" for="message">Mensaje</label>
         <textarea id="message" rows="4" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
       </div>
-      <button type="submit" class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold hover:bg-blue-700">Enviar</button>
+      <button type="submit" class="w-full bg-red-600 text-white py-3 rounded-lg font-semibold hover:bg-red-700">Enviar</button>
     </form>
   </section>
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-white py-8">
     <div class="container mx-auto px-4 text-center">
-      <p>&copy; 2024 CoolRides. Todos los derechos reservados.</p>
+      <p>&copy; 2024 Joel Rojas Software Developer. Todos los derechos reservados.</p>
     </div>
   </footer>
 <script src="js/index.js"></script>
