--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <label class="block text-gray-700 font-semibold mb-2" id="category-label" for="category">Categoría de Vehículos</label>
         <select id="category" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
           <option value="">Selecciona una categoría</option>
-          <option value="sedan">Sedán</option>
+          <option value="sedan">Sedan</option>
           <option value="suv">SUV</option>
           <option value="pickup">Pick-up</option>
         </select>
