--- a/vehiculos.html
+++ b/vehiculos.html
@@ -1,64 +1,84 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vehículos Disponibles</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body class="bg-gray-100">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vehículos Disponibles</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet">
+  </head>
+  <body class="bg-gray-100">
 
-  <!-- Header -->
-  <header class="bg-white shadow-md">
-    <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-      <div class="text-2xl font-bold text-red-600">RoundTrip</div>
-      <a href="index.html" class="text-gray-600 hover:text-red-600">Regresar a Inicio</a>
+    <!-- Header -->
+    <header class="bg-white shadow-md">
+      <div
+        class="container mx-auto px-4 py-4 flex justify-between items-center">
+        <div class="text-2xl font-bold text-red-600">RoundTrip</div>
+        <a href="index.html" class="text-gray-600 hover:text-red-600">Regresar a
+          Inicio</a>
+      </div>
+    </header>
+
+    <!-- Contenedor de Vehículos -->
+    <section class="container mx-auto px-4 py-8">
+      <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">Vehículos
+        Disponibles</h2>
+
+      <!-- Contenedor de Tarjetas de Vehículos -->
+      <div id="vehicle-cards-container"
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <!-- Las tarjetas se generarán aquí -->
+      </div>
+    </section>
+
+    <!-- Pop-up de Formulario -->
+    <div id="rental-popup"
+      class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center hidden">
+      <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
+        <h2 class="text-2xl font-bold mb-4 text-gray-700">Formulario de
+          Renta</h2>
+        <form id="rental-form">
+          <!-- Campos cargados desde localStorage -->
+          <p><strong>Fecha Recogida:</strong> <span id="pickup-date"></span></p>
+          <p><strong>Fecha Entrega:</strong> <span id="return-date"></span></p>
+          <p><strong>Lugar Recogida:</strong> <span
+              id="pickup-location"></span></p>
+          <p><strong>Lugar Entrega:</strong> <span
+              id="return-location"></span></p>
+          <p><strong>Vehículo:</strong> <span id="vehicle-info"></span></p>
+          <p><strong>Costo Total:</strong> $<span id="total-cost"></span></p>
+
+          <!-- Campos para ingresar datos -->
+          <label for="name" class="block mt-4 text-gray-700">Nombre:</label>
+          <input type="text" id="name"
+            class="border border-gray-300 rounded p-2 w-full" required>
+
+          <label for="lastname"
+            class="block mt-4 text-gray-700">Apellido:</label>
+          <input type="text" id="lastname"
+            class="border border-gray-300 rounded p-2 w-full" required>
+
+          <label for="passport"
+            class="block mt-4 text-gray-700">Pasaporte:</label>
+          <input type="text" id="passport"
+            class="border border-gray-300 rounded p-2 w-full" required
+            pattern="^([1-9][0-9]*)$"
+            title="El pasaporte debe ser un número mayor a 9">
+
+          <label for="email" class="block mt-4 text-gray-700">Correo:</label>
+          <input type="email" id="email"
+            class="border border-gray-300 rounded p-2 w-full" required>
+
+          <button type="button" onclick="submitRentalForm()"
+            class="mt-6 bg-red-600 text-white py-2 px-4 rounded-lg font-semibold hover:bg-red-700 w-full">Rentar</button>
+        </form>
+        <button onclick="closePopup()"
+          class="mt-4 text-red-600 font-bold">Cancelar</button>
+      </div>
     </div>
-  </header>
 
-  <!-- Contenedor de Vehículos -->
-  <section class="container mx-auto px-4 py-8">
-    <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">Vehículos Disponibles</h2>
-    
-    <!-- Contenedor de Tarjetas de Vehículos -->
-    <div id="vehicle-cards-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-      <!-- Las tarjetas se generarán aquí -->
-    </div>
-  </section>
-
-  <!-- Pop-up de Formulario -->
-  <div id="rental-popup" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center hidden">
-    <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
-      <h2 class="text-2xl font-bold mb-4 text-gray-700">Formulario de Renta</h2>
-      <form id="rental-form">
-        <!-- Campos cargados desde localStorage -->
-        <p><strong>Fecha Recogida:</strong> <span id="pickup-date"></span></p>
-        <p><strong>Fecha Entrega:</strong> <span id="return-date"></span></p>
-        <p><strong>Lugar Recogida:</strong> <span id="pickup-location"></span></p>
-        <p><strong>Lugar Entrega:</strong> <span id="return-location"></span></p>
-        <p><strong>Vehículo:</strong> <span id="vehicle-info"></span></p>
-        <p><strong>Costo Total:</strong> $<span id="total-cost"></span></p>
-
-        <!-- Campos para ingresar datos -->
-        <label for="name" class="block mt-4 text-gray-700">Nombre:</label>
-        <input type="text" id="name" class="border border-gray-300 rounded p-2 w-full" required>
-
-        <label for="lastname" class="block mt-4 text-gray-700">Apellido:</label>
-        <input type="text" id="lastname" class="border border-gray-300 rounded p-2 w-full" required>
-
-        <label for="passport" class="block mt-4 text-gray-700">Pasaporte:</label>
-        <input type="text" id="passport" class="border border-gray-300 rounded p-2 w-full" required pattern="^([1-9][0-9]*)$" title="El pasaporte debe ser un número mayor a 9">
-
-        <label for="email" class="block mt-4 text-gray-700">Correo:</label>
-        <input type="email" id="email" class="border border-gray-300 rounded p-2 w-full" required>
-
-        <button type="button" onclick="submitRentalForm()" class="mt-6 bg-red-600 text-white py-2 px-4 rounded-lg font-semibold hover:bg-red-700 w-full">Rentar</button>
-      </form>
-      <button onclick="closePopup()" class="mt-4 text-red-600 font-bold">Cancelar</button>
-    </div>
-  </div>
-
-  <script>
+    <script>
     // Obtener datos del vehículo de localStorage
     const vehicleData = JSON.parse(localStorage.getItem("vehicleData"));
     console.log("Datos cargados desde localStorage en vehiculos.html:", vehicleData);
@@ -164,7 +184,7 @@
         totalCost
       };
 
-      fetch("TU_API_URL", {
+      fetch("https://localhost:7184/Reservas", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify(rentalData)
@@ -178,5 +198,5 @@
     }
   </script>
 
-</body>
+  </body>
 </html>
