--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <!-- Header -->
  <header class="bg-white shadow-md">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-      <div class="text-2xl font-bold text-red-600">RoundTrip</div>
+      <div class="text-2xl font-bold text-red-600">Logo RoundTrip</div>
       <nav class="space-x-4">
         <a href="#" class="text-gray-600 hover:text-red-600" id="home-link">Inicio</a>
         <a href="#" class="text-gray-600 hover:text-red-600" id="services-link">Servicios</a>
@@ -19,7 +19,7 @@
         <a href="#" class="text-gray-600 hover:text-red-600" id="reviews-link">Reseñas</a>
         <a href="#" class="text-gray-600 hover:text-red-600" id="contact-link">Contacto</a>
       </nav>
-      <button onclick="toggleLanguage()" class="bg-red-600 text-white px-4 py-2 rounded-lg font-semibold hover:bg-red-700">EN / ES</button>
+      <button onclick="toggleLanguage()" class="bg-red-600 text-white px-4 py-2 rounded-lg font-semibold hover:bg-red-700">EN / ES / FR</button>
     </div>
   </header>
 
