--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
  <!-- Header -->
  <header class="bg-white shadow-md">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-      <div class="text-2xl font-bold text-red-600">Logo RoundTrip</div>
+      <div class="flex items-center space-x-2">
+        <img src="./img/logo2.png" alt="Logo RoundTrip" class="h-12 w-auto">
+        <span class="text-2xl font-bold text-red-600">RoundTrip</span>
+      </div>
       <nav class="space-x-4">
         <a href="#" class="text-gray-600 hover:text-red-600" id="home-link">Inicio</a>
         <a href="#" class="text-gray-600 hover:text-red-600" id="services-link">Servicios</a>
