Actualizacion de sitio RT

--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
     <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">Nuestros Servicios</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
       <div class="bg-white shadow-md rounded-lg p-6 text-center">
-        <img src="https://via.placeholder.com/100" alt="Servicio 1" class="mx-auto mb-4">
+        <img src="./img/alquiler.jpg" alt="Servicio 1" class="mx-auto mb-4">
         <h3 class="text-xl font-semibold text-gray-700">Servicio de Alquiler</h3>
         <p class="text-gray-600">Alquila el vehículo perfecto para tu viaje.</p>
       </div>
       <div class="bg-white shadow-md rounded-lg p-6 text-center">
-        <img src="https://via.placeholder.com/100" alt="Servicio 2" class="mx-auto mb-4">
+        <img src="./img/asistencia.jpg" alt="Servicio 2" class="mx-auto mb-4">
         <h3 class="text-xl font-semibold text-gray-700">Asistencia en Carretera</h3>
         <p class="text-gray-600">Disponibilidad 24/7 para tu tranquilidad.</p>
       </div>
       <div class="bg-white shadow-md rounded-lg p-6 text-center">
-        <img src="https://via.placeholder.com/100" alt="Servicio 3" class="mx-auto mb-4">
+        <img src="./img/vehiculos.jpg" alt="Servicio 3" class="mx-auto mb-4">
         <h3 class="text-xl font-semibold text-gray-700">Vehículos de Lujo</h3>
         <p class="text-gray-600">Viaja con estilo y confort en cualquier lugar.</p>
       </div>
@@ -104,10 +104,11 @@
   <section class="container mx-auto px-4 py-16">
     <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">Galería de Vehículos</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-6">
-      <img src="https://via.placeholder.com/400" alt="Vehículo 1" class="w-full h-64 object-cover rounded-lg shadow-md">
-      <img src="https://via.placeholder.com/400" alt="Vehículo 2" class="w-full h-64 object-cover rounded-lg shadow-md">
-      <img src="https://via.placeholder.com/400" alt="Vehículo 3" class="w-full h-64 object-cover rounded-lg shadow-md">
-      <img src="https://via.placeholder.com/400" alt="Vehículo 4" class="w-full h-64 object-cover rounded-lg shadow-md">
+      <img src="./img/tiggo.jpg" alt="Vehículo 1" class="w-full h-64 object-cover rounded-lg shadow-md">
+      <img src="./img/asx.jpg" alt="Vehículo 2" class="w-full h-64 object-cover rounded-lg shadow-md">
+      <img src="./img/santa_fe.jpg" alt="Vehículo 3" class="w-full h-64 object-cover rounded-lg shadow-md">
+      <img src="./img/sorento.jpg" alt="Vehículo 4" class="w-full h-64 object-cover rounded-lg shadow-md">
+      <img src="./img/tiggo8.jpg" alt="Vehículo 4" class="w-full h-64 object-cover rounded-lg shadow-md">
     </div>
   </section>
 
@@ -116,15 +117,15 @@
     <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">Reseñas de Clientes</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
       <div class="bg-white shadow-md rounded-lg p-6">
-        <p class="text-gray-700">"Servicio excelente, los vehículos estaban en perfectas condiciones."</p>
+        <p class="text-gray-700">"Tuve una experiencia increíble con RoundTrip. El proceso de reserva fue rápido y sencillo, el vehículo estaba en perfectas condiciones y el servicio al cliente fue excepcional. Sin duda, volveré a alquilar con ellos en el futuro. ¡100% recomendado!"</p>
         <div class="mt-4 text-right text-gray-600 font-semibold">- Carlos M.</div>
       </div>
       <div class="bg-white shadow-md rounded-lg p-6">
-        <p class="text-gray-700">"Muy recomendable, excelente atención y asistencia."</p>
+        <p class="text-gray-700">"Desde la reserva hasta la devolución del vehículo, todo fue perfecto. El personal fue muy amable y atento, y el coche estaba en excelentes condiciones. Sin duda, la mejor experiencia que he tenido alquilando un auto. ¡100% recomendado!"</p>
         <div class="mt-4 text-right text-gray-600 font-semibold">- Ana P.</div>
       </div>
       <div class="bg-white shadow-md rounded-lg p-6">
-        <p class="text-gray-700">"Vehículos de lujo a un precio razonable, gran experiencia."</p>
+        <p class="text-gray-700">"Hice la reserva en línea en solo unos minutos, y cuando llegué, el auto ya estaba listo para recoger. Sin trámites complicados ni esperas largas. Además, el coche estaba limpio y en perfectas condiciones. Definitivamente volveré a rentar aquí."</p>
         <div class="mt-4 text-right text-gray-600 font-semibold">- Juan L.</div>
       </div>
     </div>
@@ -153,7 +154,7 @@
   <!-- Footer -->
   <footer class="bg-gray-800 text-white py-8">
     <div class="container mx-auto px-4 text-center">
-      <p>&copy; 2024 Joel Rojas Software Developer. Todos los derechos reservados.</p>
+      <p>&copy; 2025 ByteLab. Todos los derechos reservados.</p>
     </div>
   </footer>
 <script src="js/index.js"></script>
